# MidiHero

./: .gitmodules  CMakeLists.txt  resource.qrc
includes/: MainWindow.h
includes/Controls/: Image.h
src/: MainWindow.cpp  main.cpp
src/Controls/: Image.cpp
